# playavg

./: .env.example  .gitignore  Cargo.toml  Secrets.toml.example  package.json  pnpm-lock.yaml
.old/: list.json
.old/src/: api.rs
rust-web/: Cargo.toml
src/: main.rs  middleware.ts
src/app/api/: average.ts
src/app/api/login/: route.ts
src/app/login/: page.tsx
src/spot/: index.ts  key.ts
src/spot/playlist/: index.ts
