[package]
name = "playavg"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.17.0"
tokio = "1.27.0"
reqwest = { version = "0.11.18", features = ["json"] }
shuttle-secrets = "0.17.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
